domkit: fix Combo to not wrap

--- a/src/domkit/fanCss/Combo.css
+++ b/src/domkit/fanCss/Combo.css
@@ -9,6 +9,7 @@
 div.domkit-Combo {
   box-sizing: border-box;
   display: inline-block;
+  white-space: nowrap;
 }
 
 div.domkit-Combo input.domkit-TextField {
